[gd_scene load_steps=7 format=3 uid="uid://bjc1vvwyaugsq"]

[ext_resource type="Script" path="res://Scripts/Point.gd" id="1_p0oc1"]
[ext_resource type="Script" path="res://Scripts/3DLabel.gd" id="2_7pb36"]

[sub_resource type="SphereMesh" id="SphereMesh_0e6xb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sg5nx"]
shading_mode = 0

[sub_resource type="SphereShape3D" id="SphereShape3D_k5cxk"]

[sub_resource type="ViewportTexture" id="ViewportTexture_dxlmd"]
viewport_path = NodePath("NameLabel/SubViewport")

[node name="Point" type="MeshInstance3D"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
mesh = SubResource("SphereMesh_0e6xb")
surface_material_override/0 = SubResource("StandardMaterial3D_sg5nx")
script = ExtResource("1_p0oc1")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
disable_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_k5cxk")

[node name="Info" type="Control" parent="."]
process_mode = 4
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -166.0
offset_bottom = -166.0
grow_vertical = 0

[node name="CurObject" type="LineEdit" parent="Info"]
layout_mode = 0
offset_left = 68.0
offset_top = -15.0
offset_right = 279.0
offset_bottom = 16.0
text = "A"

[node name="Label" type="Label" parent="Info/CurObject"]
layout_mode = 0
offset_left = -57.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 29.0
text = "Point:"

[node name="X" type="SpinBox" parent="Info"]
layout_mode = 0
offset_left = 37.0
offset_top = 30.0
offset_right = 295.0
offset_bottom = 66.0
min_value = -100.0
step = 0.01

[node name="Label" type="Label" parent="Info/X"]
layout_mode = 0
offset_left = -24.0
offset_top = 6.0
offset_right = -11.0
offset_bottom = 32.0
text = "X"

[node name="Y" type="SpinBox" parent="Info"]
layout_mode = 0
offset_left = 37.0
offset_top = 74.0
offset_right = 295.0
offset_bottom = 110.0
min_value = -100.0
step = 0.01

[node name="Label2" type="Label" parent="Info/Y"]
layout_mode = 0
offset_left = -24.0
offset_top = 6.0
offset_right = -12.0
offset_bottom = 32.0
text = "Y"

[node name="Z" type="SpinBox" parent="Info"]
layout_mode = 0
offset_left = 37.0
offset_top = 121.0
offset_right = 295.0
offset_bottom = 157.0
min_value = -100.0
step = 0.01

[node name="Label3" type="Label" parent="Info/Z"]
layout_mode = 0
offset_left = -24.0
offset_top = 5.0
offset_right = -8.0
offset_bottom = 31.0
text = "Z"

[node name="Close" type="Button" parent="Info"]
layout_mode = 0
offset_left = 309.0
offset_top = 81.0
offset_right = 410.0
offset_bottom = 113.0
text = "Close"

[node name="Delete" type="Button" parent="Info"]
layout_mode = 0
offset_left = 309.0
offset_top = 122.0
offset_right = 410.0
offset_bottom = 154.0
text = "Delete
"

[node name="Distance" type="Button" parent="Info"]
layout_mode = 0
offset_left = 10.0
offset_top = -55.0
offset_right = 216.0
offset_bottom = -24.0
text = "Distance to another point"

[node name="Points" type="Control" parent="Info"]
visible = false
layout_mode = 1
anchor_left = -2.588
anchor_top = 10.97
anchor_right = -2.588
anchor_bottom = 10.97
offset_left = 449.0
offset_top = -174.0
offset_right = 761.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2

[node name="A" type="Label" parent="Info/Points"]
layout_mode = 0
offset_left = 83.0
offset_top = -75.0
offset_right = 124.0
offset_bottom = -49.0
text = "To which point"

[node name="ItemList" type="ItemList" parent="Info/Points/A"]
layout_mode = 0
offset_left = 1.0
offset_top = 26.0
offset_right = 108.0
offset_bottom = 136.0

[node name="DistanceInfo" type="Label" parent="Info/Points"]
layout_mode = 0
offset_left = 70.0
offset_top = 82.0
offset_right = 203.0
offset_bottom = 111.0
text = "Distance: "
horizontal_alignment = 1

[node name="Cancel" type="Button" parent="Info/Points"]
layout_mode = 0
offset_left = 72.0
offset_top = 120.0
offset_right = 205.0
offset_bottom = 151.0
text = "Cancel"

[node name="NameLabel" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.827922, 0)
modulate = Color(0.733333, 0.733333, 0.733333, 1)
pixel_size = 0.1
billboard = 1
fixed_size = true
texture = SubResource("ViewportTexture_dxlmd")

[node name="SubViewport" type="SubViewport" parent="NameLabel"]
transparent_bg = true
size = Vector2i(43, 26)
script = ExtResource("2_7pb36")

[node name="Label" type="Label" parent="NameLabel/SubViewport"]
offset_right = 40.0
offset_bottom = 23.0
text = "AAAA"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="text_submitted" from="Info/CurObject" to="." method="_on_cur_object_text_submitted"]
[connection signal="value_changed" from="Info/X" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="Info/Y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="Info/Z" to="." method="_on_z_value_changed"]
[connection signal="pressed" from="Info/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Info/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Info/Distance" to="." method="_on_distance_pressed"]
[connection signal="item_clicked" from="Info/Points/A/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Info/Points/Cancel" to="." method="_on_cancel_pressed"]
